# rust-web

./: .env  .env.sample  .gitignore  Cargo.toml  README.md  init_sql.sh  start_psql.sh
migrations/: 20231213091844_init_todos.sql  20231215141719_todo_app.sql
src/: architecture.rs  basics.rs  client.rs  context.rs  handlers.rs  main.rs  middleware.rs  persistence.rs  playground.rs  welcome.rs
src/todoai/: mod.rs  server.rs
src/todoai/controllers/: handler.rs  mod.rs  todoservice.rs
src/todoai/models/: mod.rs  priority.rs  status.rs  todo.rs
src/todoai/routes/: routes.rs
src/todoai/services/: mod.rs  todoai.rs  todorepo.rs
