[package]
name = "rust-web"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.74"
axum = { version = "0.7.2", features = ["default"] }
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "postgres", "time", "chrono" ] }
tokio = { version = "1.34.0", features = ["full"] }
testcontainers-modules = { version = "0.2.0", features = ["postgres"] }
tracing-subscriber = "0.3.18"
testcontainers = "0.15.0"
tower = "0.4.13"
hyper = "1.0.1"
http-body-util = "0.1.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tower-http = { version = "0.5.0", features = ["full"] }
base64 = "0.21.5"
axum-prometheus = "0.5.0"
metrics = "0.21.1"
reqwest = { version = "0.11.22", features = ["json"] }
async-openai = "0.17.1"
chrono = { version = "0.4.31", features = ["serde"] }
